kustomize/external-secrets/admission-webhooks-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-secrets-webhook
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets-webhook
  policyTypes:
    - Ingress
  ingress:
    - ports:
      - port: webhook
        protocol: TCP
