kustomize/external-secrets/egress-networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
  egress:
    - toFQDNs:
        - matchName: api.doppler.com
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: api.akeyless.io
      toPorts:
        - ports:
            - port: "443"
